Add tree as query result